# bugsafe

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  AGENTS.md  CHANGELOG.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/: secret_scanning.yml
.github/workflows/: ci.yml  docs-deploy.yml  docs-preview.yml  release-pypi.yml  release-testpypi.yml
.windsurf/rules/: bugsafe.md
dev/: 404.html  index.html  objects.inv  sitemap.xml
dev/CONTRIBUTING/: index.html
dev/CONTRIBUTING/code-style/: index.html
dev/CONTRIBUTING/development-setup/: index.html
dev/CONTRIBUTING/release-process/: index.html
dev/CONTRIBUTING/testing/: index.html
dev/DOCUMENTATION_PLAN/: index.html
dev/PATTERNS/: index.html
dev/SECURITY/: index.html
dev/agent-rules/: index.html
dev/agent-rules/bugsafe/: index.html
dev/agent-rules/code-style/: index.html
dev/agent-rules/redaction/: index.html
dev/agent-rules/testing/: index.html
dev/changelog/: index.html
dev/concepts/bundle-format/: index.html
dev/concepts/how-it-works/: index.html
dev/concepts/security-model/: index.html
dev/concepts/tokenization/: index.html
dev/contributing/code-style/: index.html
dev/contributing/development-setup/: index.html
dev/contributing/release-process/: index.html
dev/overrides/: main.html
dev/search/: search_index.json
docs/: CONTRIBUTING.md  PATTERNS.md  SECURITY.md  changelog.md  index.md  llms.txt
docs/agent-rules/: bugsafe.md  code-style.md  index.md  redaction.md  testing.md
docs/concepts/: bundle-format.md  how-it-works.md  security-model.md  tokenization.md
docs/contributing/: code-style.md  development-setup.md  release-process.md  testing.md
docs/getting-started/: first-bundle.md  installation.md  quickstart.md
docs/guides/: ci-cd-integration.md  cli-usage.md  custom-patterns.md  examples.md  llm-integration.md  llm-prompts.md  programmatic-api.md
docs/reference/: cli.md  configuration.md  patterns.md
docs/stylesheets/: extra.css
examples/: README.md  pre-commit-hooks.yaml
examples/automation/: github_issue.py  slack_notify.py
examples/basic/: README.md  crash_demo.py
examples/ci-cd/: github-actions.yml  gitlab-ci.yml
src/bugsafe/: __init__.py  __main__.py  cli.py  config.py  pytest_plugin.py
tests/: __init__.py
tests/fixtures/: __init__.py  secrets.py  tracebacks.py
tests/fuzz/: __init__.py  test_coverage_boost.py  test_malformed.py
tests/integration/: __init__.py  test_cli.py  test_cli_commands.py  test_cli_extended.py  test_full_workflow.py
tests/unit/: __init__.py  test_bundle.py  test_bundle_extended.py  test_bundle_reader_coverage.py  test_config.py  test_coverage_boost.py  test_engine_behavior.py  test_engine_extended.py  test_environment.py  test_environment_extended.py  test_mcp_tools.py  test_path_anonymizer.py  test_patterns.py  test_pytest_plugin.py  test_reader_behavior.py  test_redact_init_coverage.py  test_redact_properties.py  test_redaction_engine.py  test_redaction_extended.py  test_redaction_properties.py  test_render.py  test_runner.py  test_runner_extended.py  test_scan_command.py  test_schema_coverage.py  test_tokenizer.py  test_traceback.py  test_traceback_extended.py  test_writer_behavior.py  test_writer_coverage.py  test_writer_extended.py
(+41 files in other folders)
