[project]
name = "bugsafe"
version = "0.1.0"
description = "Safe-to-share crash bundles for humans and LLMs"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["debugging", "crash", "redaction", "privacy", "CLI"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Debuggers",
]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.10.0",
    "ruff>=0.14.0",
    "pip-audit>=2.7.0",
    "pycln>=2.6.0",
    "hypothesis>=6.100.0",
    "pre-commit>=4.0.0",
]
docs = [
    "mike>=2.1.3",
    "mkdocs-material>=9.7.1",
    "mkdocs-minify-plugin>=0.8.0",
    "mkdocstrings[python]>=1.0.0",
]

[project.scripts]
bugsafe = "bugsafe.cli:app"

[project.entry-points.pytest11]
bugsafe = "bugsafe.pytest_plugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bugsafe"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.10.0",
    "ruff>=0.14.0",
    "pip-audit>=2.7.0",
    "pycln>=2.6.0",
    "hypothesis>=6.100.0",
    "pre-commit>=4.0.0",
    "bandit>=1.9.2",
    "mkdocs-copy-to-llm>=0.2.8",
]

[tool.ruff]
target-version = "py310"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "S",   # bandit (security)
    "ANN", # flake8-annotations
]
ignore = [
    "S101",   # assert allowed in tests
    "S108",   # temp file patterns (false positive - these are regex patterns for detection)
    "S110",   # try-except-pass (intentional for optional features)
    "S603",   # subprocess call (intentional - we run user commands)
    "S607",   # partial executable path (intentional - git, sw_vers)
    "ANN401", # Dynamically typed expressions (Any)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "ANN"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["bugsafe.mcp.*", "mcp.*"]
ignore_missing_imports = true
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.pycln]
all = true

[tool.coverage.run]
source = ["src/bugsafe"]
branch = true
omit = [
    "src/bugsafe/mcp/*",                # Optional feature, requires extra dep
    "src/bugsafe/__main__.py",          # Entry point only
    "src/bugsafe/bundle/exceptions.py", # Just class definitions
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "except ImportError:",
]
